--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/jquery.inputmask.bundle.js"></script>
+<script src="./mask.js"></script>
 <script src="./script.js"></script>
 </html>
